--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19649,7 +19649,7 @@
       </notes>
       <segment>
         <source>Für %num% weitere Städte</source>
-        <target>Pour %num% villes supplémentaire(s)</target>
+        <target>Pour %num% ville(s) supplémentaire(s)</target>
       </segment>
     </unit>
     <unit id=".Qkxxst" name="Stadttor zerstört!">
