FR Typo for Witness of armageddon description

--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8297,7 +8297,7 @@
       </notes>
       <segment>
         <source>Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</source>
-        <target>En tant que témoin de l’Armagedon, tu peux fuir les situations sans issue.</target>
+        <target>En tant que témoin de l’Armageddon, vous pouvez fuir les situations sans issue.</target>
       </segment>
     </unit>
     <unit id="Fxoqglo" name="Ruhm">
