--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -7018,7 +7018,7 @@
       </notes>
       <segment>
         <source>Du befestigst den {item} und bedeckst ihn zur Tarnung mit herumliegendem Müll und vertrockneten Zweigen. Na bitte, das sollte hoffentlich deine Überlebenschancen heute Nacht verbessern. Du hast dafür 1 Aktionspunkt verbraucht.</source>
-        <target>Vous installez solidement {item} puis placez dessus quelques débris et branches séchées pour camoufler le tout. Voilà qui devrait améliorer vos chances de vous cacher ici cette nuit. Vous avez utilisé 1 point(s) d'action.</target>
+        <target><![CDATA[Vous installez solidement {item} puis placez dessus quelques débris et branches séchées pour camoufler le tout. Voilà qui devrait <strong>améliorer vos chances de vous cacher ici</strong> cette nuit.{hr}Vous avez utilisé <strong>1 point(s) d'action</strong>.]]></target>
       </segment>
     </unit>
     <unit id="68c4rQB">
