--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19760,5 +19760,41 @@
         <target>La peur vous prend aux tripes tandis que vous explorez %building%... Néanmoins, ça n'aura pas été inutile puisque vous finissez par trouver %item%.</target>
       </segment>
     </unit>
+    <unit id="ijrzep1">
+      <notes>
+        <note category="german">Die Zeremonie besteht darin, die Leiche mit einer 1x &lt;strong&gt;Ration Wasser&lt;/strong&gt; zu übergießen. Die Leiche wird dann sofort zerstört.</note>
+      </notes>
+      <segment>
+        <source>Die Zeremonie besteht darin, die Leiche mit einer 1x &lt;strong&gt;Ration Wasser&lt;/strong&gt; zu übergießen. Die Leiche wird dann sofort zerstört.</source>
+        <target><![CDATA[Cette cérémonie consiste à arroser le corps avec 1x <strong>Ration d'eau</strong>. Cela aura l'effet de le détruire immédiatement.]]></target>
+      </segment>
+    </unit>
+    <unit id="o7WUM4t">
+      <notes>
+        <note category="german">Wenn du eine Leiche entsorgen möchtest, ohne dafür Wasser zu verbrauchen, kannst du sie &lt;strong&gt;nach draußen ziehen&lt;/strong&gt;. Diese Aktion verbraucht &lt;strong&gt;2 Aktionspunkte&lt;/strong&gt;.</note>
+      </notes>
+      <segment>
+        <source>Wenn du eine Leiche entsorgen möchtest, ohne dafür Wasser zu verbrauchen, kannst du sie &lt;strong&gt;nach draußen ziehen&lt;/strong&gt;. Diese Aktion verbraucht &lt;strong&gt;2 Aktionspunkte&lt;/strong&gt;.</source>
+        <target><![CDATA[Pour vous débarrasser d'un cadavre sans utiliser de l'eau, vous pouvez <strong>le traîner dehors</strong>. Cette action requiert <strong>2 points d'action</strong>.]]></target>
+      </segment>
+    </unit>
+    <unit id="uLW8jwG" name="Diese Aktion verbraucht 1x Ration Wasser. Bestätigen?">
+      <notes>
+        <note category="german">Diese Aktion verbraucht 1x Ration Wasser. Bestätigen?</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion verbraucht 1x Ration Wasser. Bestätigen?</source>
+        <target>Cela consommera 1x Ration d'eau. Confirmer ?</target>
+      </segment>
+    </unit>
+    <unit id="dk0TbNl" name="Diese Aktion verbraucht 2 Aktionspunkte. Bestatigen ?">
+      <notes>
+        <note category="german">Diese Aktion verbraucht 2 Aktionspunkte. Bestatigen ?</note>
+      </notes>
+      <segment>
+        <source>Diese Aktion verbraucht 2 Aktionspunkte. Bestatigen ?</source>
+        <target>Cela nécessite 2 points d'action. Confirmer ?</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
