--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -7442,7 +7442,7 @@
         <target>Probablemente has tenido suerte... Como víctima de la Gran Plaga, esta vez has evitado una desagradable infección.</target>
       </segment>
     </unit>
-    <unit id="5DH1uFn">
+    <unit id="LekZSqE">
       <notes>
         <note category="german">Mit aller Kraft schlägst du mehrmals auf einen Zombie ein, aber &lt;strong&gt;es scheint ihm nichts anzuhaben&lt;/strong&gt;!</note>
       </notes>
